--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
-charset = utf-8
+charset = utf-8-bom
 indent_style = space
 indent_size = 4
 end_of_line = crlf
