#82358 Inclusão do integrador da Khan configuração dos WebServices
Related Work Items: #1025

--- a/Api/Glass.API.Backend/Mef.config
+++ b/Api/Glass.API.Backend/Mef.config
@@ -597,5 +597,12 @@
       </exports>
     </part>
 
+    <part type="Glass.Integracao.Khan.IntegradorKhan, Glass.Integracao.Khan" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
+      </exports>
+    </part>
+    
   </parts>
 </mef.configuration>
