--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -496,6 +496,8 @@
     <Compile Include="Fiscal\DAL\ProdutoNfCustoDAO.cs" />
     <Compile Include="Fiscal\DAL\ProdutoNfCustoRentabilidadeDAO.cs" />
     <Compile Include="Fiscal\DAL\ProdutoNfRentabilidadeDAO.cs" />
+    <Compile Include="Fiscal\Domain\NotaFiscalEventoArgs.cs" />
+    <Compile Include="Fiscal\Domain\NotaFiscalGerada.cs" />
     <Compile Include="Fiscal\ICalculadoraImposto.cs" />
     <Compile Include="Fiscal\ICalculoImpostoResultado.cs" />
     <Compile Include="Fiscal\Model\CargaTributariaMediaMT.cs" />
@@ -548,9 +550,7 @@
     <Compile Include="Global\DAL\GrupoClienteDAO.cs" />
     <Compile Include="Global\DAL\TipoInstalacaoDAO.cs" />
     <Compile Include="Global\DAL\TipoEntregaDAO.cs" />
-    <Compile Include="Global\Domain\ProdutoAtualizado.cs" />
-    <Compile Include="Global\Domain\EventoComSessaoArgs.cs" />
-    <Compile Include="Global\Domain\ProdutoEventoArgs.cs" />
+    <Compile Include="Domain\EventoComSessaoArgs.cs" />
     <Compile Include="Global\Model\AvaliacaoAtendimento.cs" />
     <Compile Include="Global\Model\DeviceApp.cs" />
     <Compile Include="Global\Model\FlagArqMesaProduto.cs" />
