--- a/Integracao/Glass.Integracao.Khan/packages.config
+++ b/Integracao/Glass.Integracao.Khan/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Colosoft.Business" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.CommonServiceLocator" version="1.0.0" targetFramework="net461" />
   <package id="Colosoft.Core" version="1.0.0.272" targetFramework="net461" />
+  <package id="Colosoft.Data" version="1.0.0" targetFramework="net461" />
+  <package id="Colosoft.GDA" version="1.4.5.14925" targetFramework="net461" />
+  <package id="Colosoft.Net" version="1.0.0" targetFramework="net461" />
+  <package id="Colosoft.Query" version="1.0.0" targetFramework="net461" />
+  <package id="Colosoft.Text" version="1.0.0" targetFramework="net461" />
+  <package id="Colosoft.Validation" version="1.0.0" targetFramework="net461" />
   <package id="editorconfig" version="0.12.1" targetFramework="net461" />
+  <package id="FluentScheduler" version="5.3.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net461" developmentDependency="true" />
 </packages>
