--- a/UI/Web/Glass.UI.Web.Process/Glass.UI.Web.Process.csproj
+++ b/UI/Web/Glass.UI.Web.Process/Glass.UI.Web.Process.csproj
@@ -195,6 +195,10 @@
       <Project>{53e0ef88-b812-45fe-9f91-f4f7889bd6cb}</Project>
       <Name>Glass.Global.UI.Web.Process</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Integracao\Glass.Integracao\Glass.Integracao.csproj">
+      <Project>{eddba46b-4412-433b-a587-c481ba2831fd}</Project>
+      <Name>Glass.Integracao</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Negocios\Glass.Negocios.Entidades\Glass.Negocios.Entidades.csproj">
       <Project>{de1a9b49-0710-4fa1-bbfb-1c83f9e9533c}</Project>
       <Name>Glass.Negocios.Entidades</Name>
