#1184 Criação de mecanismo para desabilitar respostas XML, se necessário

--- a/Api/Glass.API.Backend/AppSettings.config
+++ b/Api/Glass.API.Backend/AppSettings.config
@@ -2,4 +2,5 @@
 <appSettings>
   <add key="authorizedUris" value="*" />
   <add key="diretorioSistema" value="../../Glass" />
+  <add key="permitirXml" value="false" />
 </appSettings>
