#567 Alterações de problemas encontrados durante os testes

--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -478,9 +478,9 @@
     <Content Include="Cadastros\CadGrupoCliente.aspx" />
     <Content Include="Scripts\jquery\jquery-ajuste.js" />
     <Content Include="Scripts\ResizeObserverPolyfill.js" />
-    <Content Include="Vue\Clientes\Componentes\LstSugestaoCliente.Filtro.js" />
-    <Content Include="Vue\Clientes\Componentes\LstSugestaoCliente.js" />
-    <Content Include="Vue\Clientes\Templates\LstSugestaoCliente.Filtro.html" />
+    <Content Include="Vue\Clientes\Sugestoes\Componentes\LstSugestaoCliente.Filtro.js" />
+    <Content Include="Vue\Clientes\Sugestoes\Componentes\LstSugestaoCliente.js" />
+    <Content Include="Vue\Clientes\Sugestoes\Templates\LstSugestaoCliente.Filtro.html" />
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
     <Content Include="Vue\Feriados\Componentes\LstFeriados.js" />
     <Content Include="Vue\Comissionados\Componentes\LstComissionados.Filtro.js" />
